Implement Availability, Booking, Customer, and Review Services