@@ -1,31 +1,48 @@
 package Team.C.Service.Spot.config;
 
+import Team.C.Service.Spot.security.JwtAuthenticationEntryPoint;
+import Team.C.Service.Spot.security.JwtAuthenticationFilter;
+import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
-import java.util.List;
 
 /**
  * Security configuration for JWT authentication and authorization.
- * Configures public endpoints, CORS, and password encoding.
+ * Configures public endpoints, CORS, JWT filter, and password encoding.
  *
  * @author Team C
- * @version 3.0
- * @since 2025-11-28
+ * @version 4.0
+ * @since 2025-11-29
  */
 @Configuration
 @EnableWebSecurity
+@EnableMethodSecurity
+@RequiredArgsConstructor
 public class SecurityConfiguration {
+
+    private final JwtAuthenticationFilter jwtAuthenticationFilter;
+    private final JwtAuthenticationEntryPoint jwtAuthenticationEntryPoint;
+
+    /**
+     * Allowed CORS origins from environment variable.
+     * Defaults to localhost URLs for development.
+     */
+    @Value("${cors.allowed-origins:http://localhost:3000,http://localhost:5173,http://localhost:8080}")
+    private String allowedOrigins;
 
     /**
      * BCrypt password encoder bean.
@@ -40,8 +57,7 @@ public class SecurityConfiguration {
 
     /**
      * Security filter chain configuration.
-     * Currently configured for development with permissive access.
-     * TODO: Implement JWT authentication filter for production.
+     * Configures JWT authentication, authorization rules, and CORS.
      *
      * @param http HttpSecurity object
      * @return SecurityFilterChain
@@ -53,12 +69,37 @@ public class SecurityConfiguration {
             .csrf(csrf -> csrf.disable())
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            .exceptionHandling(exception ->
+                exception.authenticationEntryPoint(jwtAuthenticationEntryPoint))
             .authorizeHttpRequests(auth -> auth
-                // Allow all requests for development
-                .anyRequest().permitAll()
+                // Public endpoints (no authentication required)
+                .requestMatchers(
+                    "/api/auth/**",                    // Registration & login
+                    "/api/categories/**",              // Public categories
+                    "/api/services",                   // Browse services
+                    "/api/services/**",                // Service details
+                    "/api/users/providers/**",         // Browse providers
+                    "/error",                          // Error page
+                    "/actuator/**"                     // Health checks (if enabled)
+                ).permitAll()
+
+                // Admin-only endpoints
+                .requestMatchers("/api/admin/**").hasRole("ADMIN")
+
+                // Customer endpoints
+                .requestMatchers("/api/customers/**").hasRole("CUSTOMER")
+                .requestMatchers("/api/bookings").hasAnyRole("CUSTOMER", "PROVIDER")
+
+                // Provider endpoints
+                .requestMatchers("/api/services/*/toggle-status").hasRole("PROVIDER")
+
+                // All other requests require authentication
+                .anyRequest().authenticated()
             )
             .formLogin(form -> form.disable())
-            .httpBasic(basic -> basic.disable());
+            .httpBasic(basic -> basic.disable())
+            // Add JWT filter before UsernamePasswordAuthenticationFilter
+            .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
@@ -66,17 +107,23 @@ public class SecurityConfiguration {
     /**
      * CORS configuration source.
      * Allows requests from the frontend React application.
+     * Origins are configurable via environment variable for production deployment.
      *
      * @return CorsConfigurationSource
      */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:5173", "http://localhost:3000"));
+
+        // Split allowed origins by comma (supports multiple origins)
+        String[] origins = this.allowedOrigins.split(",");
+        configuration.setAllowedOrigins(Arrays.asList(origins));
+
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
         configuration.setAllowedHeaders(Arrays.asList("*"));
         configuration.setAllowCredentials(true);
         configuration.setExposedHeaders(Arrays.asList("Authorization"));
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
